updated description day 6, did some refactoring